--- a/team_task_list.html
+++ b/team_task_list.html
@@ -12,6 +12,7 @@
       background-color: paleturquoise;
       font-size: 8px;
       width: 350px;
+      margin-bottom: 10px;
     }
   </style>
   <!--大目標：優先度と着手状況が把握できるTeam共有タスクリストを作る-->
@@ -21,7 +22,7 @@
   <!--各タスクにチェックボックス（着手状況、完結状況）をつける【Clear】-->
   <!--着手チェックボックスにCheckを入れると誰が着手（完結も）しているかわかる-->
   <!--完結チェックボックスにCheckが入ったものはDeleteボタンを押せば一括削除できる-->
-
+  <!--発信者毎にソートできるようにする-->
 </head>
 
 <body>
@@ -60,6 +61,7 @@
 
   <!-- データ出力場所 -->
   <ul id="output"></ul>
+
 
 
 
@@ -149,7 +151,8 @@
       ////////////////////////データサーバーに保管しているデータを取得
       const tagArray = [];////タグに入ったデータを入れる空配列
       dataArray.forEach(function (data) {
-        tagArray.push(`
+        //↓(``)内をtagArray=[]に追加するメソッド
+        tagArray.push(`   
     <li id="${data.id}">
           <p>【タスク】<br><span class="task_text">${data.data.text}</span></p>
          
@@ -160,16 +163,17 @@
 
      <div class="check_box">
       <div>
-        <p>着手<span><input type="checkbox" id="start_check" value="着手"></span></p>
+        <label><input type="checkbox" id="start_check" value="着手">着手</label>
       </div>
       <div>
-        <p>完了<span><input type="checkbox" id="clear_check" value="完了"></span></p>
+        <label><input id="clear_check" type="checkbox" value="完了">完了</label>
       </div>
      </div>
-           <p>【taskID】<br><span>${data.id}</span></p>
+           <p>【taskID】${data.id}</p>
     </li>
   `);
       });
+      ///↑テンプレートリテラル(=テンプレート文字列)に変数を埋め込む際は${変数名}と記述する。
 
       $("#output").html(tagArray);
     });
@@ -188,11 +192,24 @@
 
       if (finish_check.checked) {///もし完了チェックボックスにCheckが入っていたら
 
-        deleteDoc(doc(db, "chat", $("#taskid").val()));
+        if (window.confirm("Tasklabelを削除しますか?")) {
 
-        $("#taskid").val("");//送信した後は空になるというコード
+          ///////////////////////////////////////////////
+
+          deleteDoc(doc(db, "chat", $("#taskid").val()));///firebaseドキュメントを削除するメソッド
+          $("#taskid").val("");//送信した後は空になるというコード
+
+          //////////////////////////////////////////////
+
+          alert("Tasklabelを削除しました");
+        }
       }
     });
+
+
+
+
+
 
 
   </script>
