--- a/team_task_list.html
+++ b/team_task_list.html
@@ -99,7 +99,7 @@
     } from "https://www.gstatic.com/firebasejs/9.5.0/firebase-firestore.js";
     ///////////////////////////////////////////////////////////////////////////////////
     const firebaseConfig = {
-      apiKey: "AIzaSyCTIwNP_5By6Iuqs8Zkv8gxA4EyjmpiEf0",/////GitHubに提出する際は削除する。/////////////////
+      /////GitHubに提出する際は削除する。/////////////////
       authDomain: "chat-32637.firebaseapp.com",
       projectId: "chat-32637",
       storageBucket: "chat-32637.appspot.com",
