--- a/team_task_list.html
+++ b/team_task_list.html
@@ -9,7 +9,7 @@
   <title>TTL</title>
   <style>
     #output ul {
-      background-color: paleturquoise;
+      background-color: rgb(215, 240, 240);
       font-size: 8px;
       width: 350px;
       margin-bottom: 10px;
@@ -26,36 +26,42 @@
 </head>
 
 <body>
-  <h1>TeamTaskList</h1>
+  <h1>TEAM TASK LIST</h1>
   <!-- 入力場所を作成しよう -->
   <form>
     <fieldset class="task_input_box">
-      <legend>Task_Label管理</legend>
-      <div>
-        発信者: <input type="text" id="name">
+      <legend>ラベル作成フォーム</legend>
+      <div class="input_form">
+        <div class="iuput_text">
+          発信者:<input type="text" id="name">
+        </div>
+        <div class="input_btn">
+          <button type="reset" id="reset">入力取消</button>
+        </div>
       </div>
-      <div>
-        Task: <input type="text" id="text">
+
+      <div class="task_text">
+        内容　:<input type="text" id="text">
       </div>
+
       <div>
         期限　:<input type="datetime-local" id="limit">
       </div>
-    </fieldset>
 
-    <div class="btn_item">
-      <div>
+      <div class="send_btn">
         <button type="button" id="send">ラベル貼付</button>
       </div>
-      <div>
-        <button type="reset" id="reset">入力取消</button>
-      </div>
-      <!--削除フォーム-->
-      <!-- <fieldset class="task_clear_box"> 
+    </fieldset>
+
+    <!--削除フォーム-------------------------------------->
+    <!-- <fieldset class="task_clear_box"> 
           <legend>Task_Label削除</legend>
-          <taskID: <input type="text" id="taskid">-->
-      <div>
-        <button type="button" id="delete">完了ラベル削除</button>
-      </div>
+          <taskID: <input type="text" id="taskid">      -->
+    <!---------------------------------------------------->
+
+    <div class="delete_btn">
+      <button type="button" id="delete">完了ラベル削除</button>
+    </div>
     </div>
     <!-- </fieldset>-->
   </form>
@@ -94,7 +100,7 @@
       doc,
       deleteDoc,
     } from "https://www.gstatic.com/firebasejs/9.5.0/firebase-firestore.js";
-    ///////////////////////////////////////////////////////////////////////////////////
+    /////////////////////////////////////////////////////////////////////////////////
     const firebaseConfig = {
       apikey: "AIzaSyCTIwNP_5By6Iuqs8Zkv8gxA4EyjmpiEf0",/////GitHubに提出する際は削除する。/////////////////
       authDomain: "chat-32637.firebaseapp.com",
@@ -103,15 +109,20 @@
       messagingSenderId: "980453475469",
       appId: "1:980453475469:web:a08fa02a4c3ba3bdb80ec4"
     };
-    //////////////////////////////////////////////////////
+    //データベースとリンクさせる////////////////////////////////////////////////
     const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
 
-    const db = getFirestore(app);//データベースとリンクさせるコード
+    $("#send").on("click", function () {
 
-    $("#send").on("click", function () {  /////【Enter】押したら送信されるように変更////
-      /////Enterキー（=keyNo13）を押すと｛｝内の処理が実装されるという関数
-      // $("#text").on("keydown", function (e) {
-      // if (e.keyCode === 13) {
+      //【Enter】押したら送信されるように変更///////////////////////////////////
+      //                                                                     //
+      // Enterキー（=keyNo13）を押すと｛｝内の処理が実装されるという関数      //
+      // $("#text").on("keydown", function (e) {                            //
+      // if (e.keyCode === 13) {                                            //
+      //                                                                    //
+      ////////////////////////////////////////////////////////////////////////
+
       const data = {
         name: $("#name").val(),///ユーザーが入力した値を取得してくるというコード
         text: $("#text").val(),
@@ -145,17 +156,17 @@
       console.log(dataArray);
 
 
-      ////////////////////////データサーバーに保管しているデータを取得
+      //データサーバーに保管しているデータを取得////////////////////////
       const tagArray = [];////タグに入ったデータを入れる空配列
       dataArray.forEach(function (data) {
-        //↓(``)内をtagArray=[]に追加するメソッド
+        //↓(``)内をtagArray=[]に追加する
         tagArray.push(`   
-    <ul>
-          <p>【タスク】<br><span class="task_text">${data.data.text}</span></p>
-         
+    <ul>        
           <p>【発信者】<span>${data.data.name
           }</span>（<span>${convertTimestampToDatetime(data.data.time)}</span>）</p> 
-   
+  
+          <p>【タスク】<br><span class="task_text">${data.data.text}</span></p>
+  
           <p>【期限】<span>${data.data.limit}</span></p>
 
      <div class="check_box">
@@ -166,7 +177,7 @@
         <label><input id="${data.id}" class="clear_check" type="checkbox" value="完了">完了</label>
       </div>
      </div>
-           <p>【taskID】${data.id}</p>
+         <!--  <p>【taskID】${data.id}</p>  -->
     </ul>
   `);
       });
@@ -174,39 +185,45 @@
 
       $("#output").html(tagArray);
     });
-    ///////////////////////////////////
+    ////////////////////////////////////
+
+    //着手者名出力//////////////////////
+    $(".start_check").prop("checked"){
+      $()
+
+    }
+
+    ////////////////////////////////////
 
 
-    ////削除処理//////////////////
-    //  $("#taskid").on("keydown", function (e) {
-    //  if (e.keyCode === 13) {
-    // }
-    // }
 
-
+    //削除処理//////////////////////////
     $("#delete").on("click", function () {
-
       // const a = $(".clear_check").prop("checked");  ///※$()内にclass名を入れる場合は.ドットを先頭に入れる。
       // console.log(a);
-
       if ($(".clear_check").prop("checked")) {///もし完了チェックボックスにCheckが入っていたら
 
         if (window.confirm("Tasklabelを削除しますか?")) {
 
           $(".clear_check:checked").each(function () {
-            ///////////////////////////////////////////////
+            //////////////////////////////////////////////////////
 
             deleteDoc(doc(db, "chat", $(this).attr("id")));///firebaseドキュメントを削除するメソッド+セレクタ内のid等の要素を取得できるコード
 
-            //$("#taskid").val("");//送信した後は空になるというコード
+            /////////////////////////////////////////////////////
 
-            //////////////////////////////////////////////
+            //$("#taskid").val("");//送信した後は空になるというコード
 
           })
           alert("Tasklabelを削除しました");
         }
       }
     });
+//初めて使用したコード///////////////
+//:checked
+//.prop()
+//.each()
+//$(this)
 
   </script>
 
